deploy/k8s/overlays/local/matching-scheduling-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matching
spec:
  template:
    spec:
      nodeSelector: null
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution: null
      containers:
        - name: matching
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 256Mi
